# PFCG-2025-1

./: .gitignore  CMakeLists.txt  README.md  RESULT.md
Mod1/: Hello3D.cpp
assets/Modelos3D/: Cube.mtl
assets/Modelos3D/final/: Nave.mtl  casa.mtl  ovni.mtl  vaca.mtl
include/glad/: glad.h
src/: CameraTrajetoria.cpp  CenaFinal.cpp  Cube3D.cpp  Cube3DTex.cpp  Hello3D.cpp  Phong.cpp  PhongCamera.cpp  TriangleTex.cpp  Vivencial2.cpp
